--- a/asporto/indexonline.html
+++ b/asporto/indexonline.html
@@ -131,17 +131,7 @@
 									</p>
 									<div class="extra-space-hero">
 										<label><strong>Note</strong>
-											<textarea maxlength="200" id="" placeholder=".........."></textarea>
-										</label>
-									</div>
-									<div class="extra-space-hero">
-										<label><strong>Cottura</strong>
-											<select>
-												<option value="medio">Media</option>
-												<option value="husker">Molto al sangue</option>
-												<option value="starbuck">Al sangue</option>
-												<option value="apollo">Ben cotta</option>
-											</select>
+											<textarea maxlength="200" id="" placeholder="........"></textarea>
 										</label>
 									</div>
 								    <div class="counter extra-space left">
@@ -177,17 +167,7 @@
 									</p>
 									<div class="extra-space-hero">
 										<label><strong>Note</strong>
-											<textarea maxlength="200" id="" placeholder=".........."></textarea>
-										</label>
-									</div>
-									<div class="extra-space-hero">
-										<label><strong>Cottura</strong>
-											<select>
-												<option value="medio">Media</option>
-												<option value="husker">Molto al sangue</option>
-												<option value="starbuck">Al sangue</option>
-												<option value="apollo">Ben cotta</option>
-											</select>
+											<textarea maxlength="" id="" placeholder=".........."></textarea>
 										</label>
 									</div>
 								    <div class="counter extra-space left">
@@ -220,16 +200,6 @@
 											<textarea maxlength="200" id="" placeholder=".........."></textarea>
 										</label>
 									</div>
-									<div class="extra-space-hero">
-										<label><strong>Cottura</strong>
-											<select>
-												<option value="medio">Media</option>
-												<option value="husker">Molto al sangue</option>
-												<option value="starbuck">Al sangue</option>
-												<option value="apollo">Ben cotta</option>
-											</select>
-										</label>
-									</div>
 								    <div class="counter extra-space left">
 										<input class="counter__input" type="text" value="0" name="counter" size="1" readonly="readonly" style="border:none; box-shadow:none;"/>
 										<a class="counter__increment" href="javascript:void(0)">+</a>
@@ -260,16 +230,6 @@
 											<textarea maxlength="200" id="" placeholder=".........."></textarea>
 										</label>
 									</div>
-									<div class="extra-space-hero">
-										<label><strong>Cottura</strong>
-											<select>
-												<option value="medio">Media</option>
-												<option value="husker">Molto al sangue</option>
-												<option value="starbuck">Al sangue</option>
-												<option value="apollo">Ben cotta</option>
-											</select>
-										</label>
-									</div>
 								    <div class="counter extra-space left">
 										<input class="counter__input" type="text" value="0" name="counter" size="1" readonly="readonly" style="border:none; box-shadow:none;"/>
 										<a class="counter__increment" href="javascript:void(0)">+</a>
@@ -298,16 +258,6 @@
 									<div class="extra-space-hero">
 										<label><strong>Note</strong>
 											<textarea maxlength="200" id="" placeholder=".........."></textarea>
-										</label>
-									</div>
-									<div class="extra-space-hero">
-										<label><strong>Cottura</strong>
-											<select>
-												<option value="medio">Media</option>
-												<option value="husker">Molto al sangue</option>
-												<option value="starbuck">Al sangue</option>
-												<option value="apollo">Ben cotta</option>
-											</select>
 										</label>
 									</div>
 								    <div class="counter extra-space left">
