--- a/asporto/indexonline.html
+++ b/asporto/indexonline.html
@@ -126,12 +126,12 @@
 									<br><br>
 									<img src="https://www.beerstrot.it/asset/img/_src/large/estivo.jpg" alt="">
 									<h2 class="extra-space" id="modalTitle">Bocconcini di Pollo</h2>
-									<p>Ingredienti: Bocconcini, sale, pepe <br>
+									<p>Bocconcini di petto di pollo. Serviti con salsa piccante fatta in casa.<br>
 										<small>Contiene: Glutine, Uova, Latte</small>
 									</p>
 									<div class="extra-space-hero">
 										<label><strong>Note</strong>
-											<textarea maxlength="200" id="" placeholder="........"></textarea>
+											<textarea id="" placeholder="........"></textarea>
 										</label>
 									</div>
 								    <div class="counter extra-space left">
