--- a/asporto/indexonline.html
+++ b/asporto/indexonline.html
@@ -143,8 +143,9 @@
 								  	<br><br><br>
 								  	<a class="close-reveal-modal" aria-label="Close">&#215;</a>
 								</div>
-<!-- fine modale -->
 							</div>
+<!-- fine modale -->
+
 						</li>
 						<li>
 							<h3>Olive all'Ascolana<span class="price">5,5</span></h3>
@@ -174,6 +175,7 @@
 								  	<br><br><br>
 								  	<a class="close-reveal-modal" aria-label="Close">&#215;</a>
 								</div>
+							</div>
 <!-- fine modale -->
 						</li>
 						<li>
@@ -204,6 +206,7 @@
 								  	<br><br><br>
 								  	<a class="close-reveal-modal" aria-label="Close">&#215;</a>
 								</div>
+							</div>
 <!-- fine modale -->
 						</li>
 						<li>
@@ -234,6 +237,7 @@
 								  	<br><br><br>
 								  	<a class="close-reveal-modal" aria-label="Close">&#215;</a>
 								</div>
+							</div>
 <!-- fine modale -->
 						</li>
 						<li>
@@ -264,6 +268,7 @@
 								  	<br><br><br>
 								  	<a class="close-reveal-modal" aria-label="Close">&#215;</a>
 								</div>
+							</div>
 <!-- fine modale -->
 						</li>
 						<li>
@@ -304,6 +309,7 @@
 								  	<br><br><br>
 								  	<a class="close-reveal-modal" aria-label="Close">&#215;</a>
 								</div>
+							</div>
 <!-- fine modale -->
 						</li>
 					   <li>
@@ -343,6 +349,7 @@
 								  	<br><br><br>
 								  	<a class="close-reveal-modal" aria-label="Close">&#215;</a>
 								</div>
+							</div>
 <!-- fine modale -->
 						</li>
 						<li>
@@ -383,6 +390,7 @@
 								  	<br><br><br>
 								  	<a class="close-reveal-modal" aria-label="Close">&#215;</a>
 								</div>
+							</div>
 <!-- fine modale -->
 						</li>
 						<li>
@@ -421,6 +429,7 @@
 								  	<br><br><br>
 								  	<a class="close-reveal-modal" aria-label="Close">&#215;</a>
 								</div>
+							</div>
 <!-- fine modale -->
 						</li>
 					</ul>
@@ -468,6 +477,7 @@
 								  	<br><br><br>
 								  	<a class="close-reveal-modal" aria-label="Close">&#215;</a>
 								</div>
+							</div>
 <!-- fine modale -->
 						</li>
 					</ul>
@@ -515,6 +525,7 @@
 								  	<br><br><br>
 								  	<a class="close-reveal-modal" aria-label="Close">&#215;</a>
 								</div>
+							</div>
 <!-- fine modale -->
 						</li>
 						<li>
@@ -554,6 +565,7 @@
 								  	<br><br><br>
 								  	<a class="close-reveal-modal" aria-label="Close">&#215;</a>
 								</div>
+							</div>
 <!-- fine modale -->
 						</li>
 						<li>
@@ -593,6 +605,7 @@
 								  	<br><br><br>
 								  	<a class="close-reveal-modal" aria-label="Close">&#215;</a>
 								</div>
+							</div>
 <!-- fine modale -->
 						</li>
 						<li>
@@ -632,6 +645,7 @@
 								  	<br><br><br>
 								  	<a class="close-reveal-modal" aria-label="Close">&#215;</a>
 								</div>
+							</div>
 <!-- fine modale -->
 						</li>
 						<li>
@@ -671,6 +685,7 @@
 								  	<br><br><br>
 								  	<a class="close-reveal-modal" aria-label="Close">&#215;</a>
 								</div>
+							</div>
 <!-- fine modale -->
 						</li>
 					</ul>
@@ -717,6 +732,7 @@
 								  	<br><br><br>
 								  	<a class="close-reveal-modal" aria-label="Close">&#215;</a>
 								</div>
+							</div>
 <!-- fine modale -->
 						</li>
 						<!-- <li>
