--- a/asporto/indexonline.html
+++ b/asporto/indexonline.html
@@ -445,12 +445,12 @@
 							<small>Contiene: Glutine, Latte, Uova</small></p>
 <!-- modale -->
 							<div class="extra-space-hero">
-								<a href="#" class="button tiny" data-reveal-id="myModal">+</a>
-								<div id="myModal" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
+								<a href="#" class="button tiny" data-reveal-id="miniburger">+</a>
+								<div id="miniburger" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
 									<br><br>
 									<img src="https://www.beerstrot.it/asset/img/_src/large/estivo.jpg" alt="">
-									<h2 class="extra-space" id="modalTitle">Bocconcini di Pollo</h2>
-									<p>Ingredienti: Bocconcini, sale, pepe <br>
+									<h2 class="extra-space" id="modalTitle">Mini Burger 7,9</h2>
+									<p>Manzo (100 grammi), cheddar. Servito con patatine e ben cotto<br>
 										<small>Contiene: Glutine, Uova, Latte</small>
 									</p>
 									<div class="extra-space-hero">
@@ -461,6 +461,7 @@
 									<div class="extra-space-hero">
 										<label><strong>Cottura</strong>
 											<select>
+												<option value="apollo">Ben cotta</option>
 												<option value="medio">Media</option>
 												<option value="husker">Molto al sangue</option>
 												<option value="starbuck">Al sangue</option>
