--- a/asporto/indexonline.html
+++ b/asporto/indexonline.html
@@ -184,7 +184,7 @@
 							<small>Contiene: Glutine, Uova, Latte</small></p>
 <!-- modale -->
 							<div class="extra-space-hero">
-								<a href="#" class="button tiny" data-reveal-id="myModal">+</a>
+								<a href="#" class="button tiny" data-reveal-id="myModal">Aggiungi al carrello</a>
 								<div id="myModal" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
 									<br><br>
 									<img src="https://www.beerstrot.it/asset/img/_src/large/estivo.jpg" alt="">
