--- a/asporto/indexonline.html
+++ b/asporto/indexonline.html
@@ -184,19 +184,15 @@
 							<small>Contiene: Glutine, Uova, Latte</small></p>
 <!-- modale -->
 							<div class="extra-space-hero">
-								<a href="#" class="button tiny" data-reveal-id="myModal">Aggiungi al carrello</a>
-								<div id="myModal" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
+								<a href="#" class="button small" data-reveal-id="mozzarelle">Aggiungi al carrello</a>
+								<div id="mozzarelle" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
 									<br><br>
 									<img src="https://www.beerstrot.it/asset/img/_src/large/estivo.jpg" alt="">
-									<h2 class="extra-space" id="modalTitle">Bocconcini di Pollo</h2>
-									<p>Ingredienti: Bocconcini, sale, pepe <br>
+									<h2 class="extra-space" id="modalTitle">Mozzarelle 5,9</h2>
+									<p>Mozzarelle fior di latte artigianali. Servite con salsa aioli fatta in casa<br>
 										<small>Contiene: Glutine, Uova, Latte</small>
 									</p>
-									<div class="extra-space-hero">
-										<label><strong>Note</strong>
-											<textarea maxlength="200" id="" placeholder=".........."></textarea>
-										</label>
-									</div>
+
 								    <div class="counter extra-space left">
 										<input class="counter__input" type="text" value="0" name="counter" size="1" readonly="readonly" style="border:none; box-shadow:none;"/>
 										<a class="counter__increment" href="javascript:void(0)">+</a>
