--- a/asporto/indexonline.html
+++ b/asporto/indexonline.html
@@ -135,7 +135,7 @@
 									<br><br>
 									<img src="https://www.beerstrot.it/asset/img/large/estivo.jpg" alt="">
 									<h2 class="extra-space" id="modalTitle">Bocconcini di Pollo</h2>
-									<p>Bocconcini di petto di pollo. Serviti con salsa piccante fatta in casa.<br><small>Contiene: Glutine, Uova, Latte</small>
+									<p>Bocconcini di petto di pollo. Serviti con salsa piccante fatta in casa.<br><small>Allergeni: Glutine, Uova, Latte</small>
 									</p>
 									<div class="extra-space-hero">
 										<label><strong>Note</strong>
@@ -148,7 +148,7 @@
 										<a class="counter__decrement" href="javascript:void(0)">&ndash;</a>
 									</div>
                                     <div>
-								  	<a href="#" class="button expand extra-space " data-reveal-id="bocconcini">Aggiungi al carrello €4,9</a>
+								  	<a href="#" class="button expand extra-space " data-reveal-id="bocconcini">Aggiungi al carrello<span class="price"> € 5,9</span></a>
                                        </div>
 								  	<br><br><br>
 								  	<a class="close-reveal-modal" aria-label="Close">&#215;</a>
