--- a/asporto/index.html
+++ b/asporto/index.html
@@ -116,7 +116,7 @@
 					<ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3 title-divider">
 						<li>
 							<h3>Bocconcini di Pollo<span class="price">5,9</span></h3>
-							<p>Serviti con salsa piccante
+							<p>Bocconcini di petto di pollo. Serviti con salsa piccante fatta in casa
 							<small>Contiene: Glutine, Uova, Latte</small></p>
 						</li>
 						<li>
