--- a/asporto/indexonline.html
+++ b/asporto/indexonline.html
@@ -113,35 +113,28 @@
 			<div class="row">
 				<div class="large-12 medium-12 small-12 columns">
 					<h2 class="subheader">Per Stuzzicare</h2>
-					<ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3 title-divider">
+					<ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-2 title-divider">
 						<li>
 							<div class="row">
 								<div class="small-3 columns">
-									<img src="https://www.beerstrot.it/asset/img/large/estivo.jpg" class="extra-space-blog">
+									<img src="https://www.beerstrot.it/asset/img/large/battuto-vitello.jpg" class="extra-space-blog">
 								</div>
 								<div class="small-9 columns">
-									<h3>Bocconcini di Pollo <span class="price">€ 5,9</span></h3>
-									<p>Serviti con salsa piccante<small>Contiene: Glutine, Uova, Latte</small>
+									<h3>Bocconcini di Pollo <span class="price">5,9</span></h3>
+									<p>Bocconcini di petto di pollo. Serviti con salsa piccante fatta in casa<small>Contiene: Glutine, Uova, Latte</small>
 									</p>
 									<a href="#" class="button tiny" data-reveal-id="bocconcini">Aggiungi al Carrello</a>
 								</div>
 
 							</div>
-
 <!-- modale -->
 							<div class="extra-space-hero">
-
 								<div id="bocconcini" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
 									<br><br>
-									<img src="https://www.beerstrot.it/asset/img/large/estivo.jpg" alt="">
+									<img src="https://www.beerstrot.it/asset/img/large/battuto-vitello.jpg" alt="">
 									<h2 class="extra-space" id="modalTitle">Bocconcini di Pollo</h2>
-									<p>Bocconcini di petto di pollo. Serviti con salsa piccante fatta in casa.<br><small>Allergeni: Glutine, Uova, Latte</small>
+									<p>Bocconcini di petto di pollo. Serviti con salsa piccante fatta in casa<br><small>Allergeni: Glutine, Uova, Latte</small>
 									</p>
-									<div class="extra-space-hero">
-										<label><strong>Note</strong>
-											<textarea id="" placeholder="........"></textarea>
-										</label>
-									</div>
 								    <div class="counter extra-space">
 										<input class="counter__input" type="text" value="1" name="counter" size="1" readonly="readonly" style="border:none; box-shadow:none;"/>
 										<a class="counter__increment" href="javascript:void(0)">+</a>
@@ -149,6 +142,77 @@
 									</div>
                                     <div>
 								  	<a href="#" class="button expand extra-space " data-reveal-id="bocconcini">Aggiungi al carrello<span class="price"> € 5,9</span></a>
+                                       </div>
+								  	<br><br><br>
+								  	<a class="close-reveal-modal" aria-label="Close">&#215;</a>
+								</div>
+							</div>
+<!-- fine modale -->
+						</li>
+						<li>
+							<div class="row">
+								<div class="small-3 columns">
+									<img src="https://www.beerstrot.it/asset/img/large/estivo.jpg" class="extra-space-blog">
+								</div>
+								<div class="small-9 columns">
+									<h3>Mozzarelle Fitte<span class="price">5,9</span></h3>
+									<p>Mozzarelle fior di latte artigianali. Servite con salsa aioli fatta in casa<small>Allergeni: Glutine, Uova, Latte</small>
+									</p>
+									<a href="#" class="button tiny" data-reveal-id="mozzarelle">Aggiungi al Carrello</a>
+								</div>
+							</div>
+<!-- modale -->
+							<div class="extra-space-hero">
+								<div id="mozzarelle" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
+									<br><br>
+									<img src="https://www.beerstrot.it/asset/img/large/estivo.jpg" alt="">
+									<h2 class="extra-space" id="mozzarelle">Mozzarelle Fritte</h2>
+									<p>Mozzarelle fior di latte artigianali. Servite con salsa aioli fatta in casa<br>
+									<small>Allergeni: Glutine, Uova, Latte</small></p>
+								    <div class="counter extra-space">
+										<input class="counter__input" type="text" value="2" name="counter" size="1" readonly="readonly" style="border:none; box-shadow:none;"/>
+										<a class="counter__increment" href="javascript:void(0)">+</a>
+										<a class="counter__decrement" href="javascript:void(0)">&ndash;</a>
+									</div>
+                                    <div>
+								  	<a href="#" class="button expand extra-space " data-reveal-id="bocconcini">Aggiungi al carrello<span class="price"> €11,8</span></a>
+                                       </div>
+								  	<br><br><br>
+								  	<a class="close-reveal-modal" aria-label="Close">&#215;</a>
+								</div>
+							</div>
+<!-- fine modale -->
+						</li>
+						<li>
+							<div class="row">
+								<div class="small-3 columns">
+									<img src="https://www.beerstrot.it/asset/img/large/cena-san-martino-2016.jpg" class="extra-space-blog">
+								</div>
+								<div class="small-9 columns">
+									<h3>Cipolle Rosse<span class="price">5,5</span></h3>
+									<p>Cipolla rossa in tempura.<br>
+									<small>Allergeni: Glutine, Latte, Crostacei</small></p>
+									<a href="#" class="button tiny" data-reveal-id="cipolle">Aggiungi al Carrello</a>
+								</div>
+							</div>
+
+<!-- modale -->
+							<div class="extra-space-hero">
+
+								<div id="cipolle" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
+									<br><br>
+									<img src="https://www.beerstrot.it/asset/img/large/cena-san-martino-2016.jpg" alt="">
+									<h2 class="extra-space" id="modalTitle">Cipolle Rosse</h2>
+									<p>Cipolla rossa in tempura.<br>
+									<small>Allergeni: Glutine, Latte, Crostacei</small>
+									</p>
+								    <div class="counter extra-space">
+										<input class="counter__input" type="text" value="3" name="counter" size="1" readonly="readonly" style="border:none; box-shadow:none;"/>
+										<a class="counter__increment" href="javascript:void(0)">+</a>
+										<a class="counter__decrement" href="javascript:void(0)">&ndash;</a>
+									</div>
+                                    <div>
+								  	<a href="#" class="button expand extra-space " data-reveal-id="cipolle">Aggiungi al carrello<span class="price"> €16,5</span></a>
                                        </div>
 								  	<br><br><br>
 								  	<a class="close-reveal-modal" aria-label="Close">&#215;</a>
