--- a/asporto/indexonline.html
+++ b/asporto/indexonline.html
@@ -117,7 +117,7 @@
 						<li>
 							<div class="row">
 								<div class="small-4 columns">
-									<img src="https://www.beerstrot.it/asset/img/large/battuto-vitello.jpg" class="extra-space-img-asporto">
+									<img src="https://picsum.photos/150" class="extra-space-img-asporto">
 								</div>
 								<div class="small-8 columns">
 									<h3>Bocconcini di Pollo<span class="price">5,9</span></h3>
@@ -152,7 +152,7 @@
 						<li>
 							<div class="row">
 								<div class="small-4 columns">
-									<img src="https://www.beerstrot.it/asset/img/large/estivo.jpg" class="extra-space-img-asporto">
+									<img src="https://via.placeholder.com/150" class="extra-space-img-asporto">
 								</div>
 								<div class="small-8 columns">
 									<h3>Mozzarelle Fitte<span class="price">5,9</span></h3>
