--- a/asporto/indexonline.html
+++ b/asporto/indexonline.html
@@ -458,11 +458,32 @@
 							<h3>Cipolle Rosse<span class="price">4,9</span></h3>
 							<p>Cipolla rossa in tempura
 							<small>Contiene: Glutine, Latte, Crostacei</small></p>
-							<div class="counter extra-space left">
+<!-- modale -->
+							<div class="extra-space-hero">
+								<a href="#" class="button tiny" data-reveal-id="myModal">+</a>
+								<div id="myModal" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
+									<br><br>
+									<img src="https://www.beerstrot.it/asset/img/_src/large/estivo.jpg" alt="">
+									<h2 class="extra-space" id="modalTitle">Bocconcini di Pollo</h2>
+									<p>Ingredienti: Bocconcini, sale, pepe <br>
+										<small>Contiene: Glutine, Uova, Latte</small>
+									</p>
+									<div class="extra-space-hero">
+										<label><strong>Note</strong>
+											<textarea maxlength="200" id="" placeholder=".........."></textarea>
+										</label>
+									</div>
+								    <div class="counter extra-space left">
 										<input class="counter__input" type="text" value="0" name="counter" size="1" readonly="readonly" style="border:none; box-shadow:none;"/>
 										<a class="counter__increment" href="javascript:void(0)">+</a>
 										<a class="counter__decrement" href="javascript:void(0)">&ndash;</a>
 									</div>
+								  	<a href="#" class="button tiny extra-space right" data-reveal-id="myModal">Aggiungi al carrello</a>
+								  	<br><br><br>
+								  	<a class="close-reveal-modal" aria-label="Close">&#215;</a>
+								</div>
+							</div>
+<!-- fine modale -->
 						</li>
 						<li>
 							<h3>Peperoncini Piccanti<span class="price">5,5</span></h3>
