--- a/asporto/indexonline.html
+++ b/asporto/indexonline.html
@@ -402,7 +402,7 @@
 							<small>Contiene: Glutine, Uova, Latte, Sedano</small></p>
 <!-- modale -->
 							<div class="extra-space-hero">
-								<a href="#" class="button tiny expand" data-reveal-id="olive">Scopri di più</a>
+								<a href="#" class="button tiny" data-reveal-id="olive">Aggiungi al carrello</a>
 								<div id="olive" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
 									<br><br>
 									<img src="https://www.beerstrot.it/asset/img/large/estivo.jpg" alt="">
@@ -433,7 +433,7 @@
 							<small>Contiene: Glutine, Uova, Latte</small></p>
 <!-- modale -->
 							<div class="extra-space-hero">
-								<a href="#" class="button small" data-reveal-id="mozzarelle">Aggiungi al carrello</a>
+								<a href="#" class="button tiny" data-reveal-id="mozzarelle">Aggiungi al carrello</a>
 								<div id="mozzarelle" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
 									<br><br>
 									<img src="https://www.beerstrot.it/asset/img/_src/large/estivo.jpg" alt="">
@@ -741,8 +741,8 @@
 								</div>
 								<div class="small-8 columns">
 									<h3>Beerstrot<span class="price">11,9</span></h3>
-									<p>Mozzarelle fior di latte artigianali. Servite con salsa aioli fatta in casa<small>Allergeni: Glutine, Uova, Latte</small>
-									</p>
+									<p>Burger di manzo (180 grammi), cheddar, bacon croccante, insalata, cipolla caramellata, pomodorini confit. Servito con patatine e a cottura media. <br>
+									<small><i>Allergeni: Glutine, Latte, Uova</i></small></p>
 									<a href="#" class="button tiny" data-reveal-id="beerstrotimage">Aggiungi al Carrello</a>
 								</div>
 							</div>
@@ -753,6 +753,55 @@
 									<img src="https://www.beerstrot.it/asset/img/large/estivo.jpg" alt="">
 									<h2 class="extra-space" id="beerstrotimage">Beerstrot</h2>
 									<p>Burger di manzo (180 grammi), cheddar, bacon croccante, insalata, cipolla caramellata, pomodorini confit. Servito con patatine e a cottura media. <br>
+									<small><i>Allergeni: Glutine, Latte, Uova</i></small></p>
+								    <div class="extra-space-hero">
+										<label><strong>Cottura</strong>
+											<select>
+												<option value="medio">Media</option>
+												<option value="husker">Molto al sangue</option>
+												<option value="starbuck">Al sangue</option>
+												<option value="apollo">Ben cotta</option>
+											</select>
+										</label>
+									</div>
+									<div class="">
+										<label><strong>Note</strong>
+											<textarea maxlength="200" id="" placeholder="eventuali variazioni"></textarea>
+										</label>
+									</div>
+									<div class="counter extra-space-hero left">
+										<input class="counter__input" type="text" value="4" name="counter" size="1" readonly="readonly" style="border:none; box-shadow:none;"/>
+										<a class="counter__increment" href="javascript:void(0)">+</a>
+										<a class="counter__decrement" href="javascript:void(0)">&ndash;</a>
+									</div>
+                                    <div>
+								  	<a href="#" class="button expand extra-space " data-reveal-id="bocconcini">Aggiungi al carrello<span class="price"> €47,6</span></a>
+                                       </div>
+								  	<br><br><br>
+								  	<a class="close-reveal-modal" aria-label="Close">&#215;</a>
+								</div>
+							</div>
+<!-- fine modale -->
+						</li>
+						<li>
+							<div class="row">
+								<div class="small-4 columns">
+									<img src="https://www.beerstrot.it/asset/img/large/beerstrot-doppio.jpg" class="extra-space-img-asporto">
+								</div>
+								<div class="small-8 columns">
+									<h3>Beerstrot Doppio<span class="price">15,9</span></h3>
+									<p>Doppio burger di manzo (180 grammi x2), cheddar, bacon croccante, insalata, cipolla caramellata, pomodorini confit. Servito con patatine e a cottura media. <br>
+									<small><i>Allergeni: Glutine, Latte, Uova</i></small></p>
+									<a href="#" class="button tiny" data-reveal-id="beerstrotDoppio">Aggiungi al Carrello</a>
+								</div>
+							</div>
+<!-- modale -->
+							<div class="extra-space-hero">
+								<div id="beerstrotdoppio" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
+									<br><br>
+									<img src="https://www.beerstrot.it/asset/img/large/beerstrot-doppio.jpg" alt="">
+									<h2 class="extra-space" id="beerstrotDoppio">Beerstrot Doppio</h2>
+									<p>Doppio burger di manzo (180 grammi x2), cheddar, bacon croccante, insalata, cipolla caramellata, pomodorini confit. Servito con patatine e a cottura media. <br>
 									<small><i>Allergeni: Glutine, Latte, Uova</i></small></p>
 								    <div class="extra-space-hero">
 										<label><strong>Cottura</strong>
