--- a/asporto/indexonline.html
+++ b/asporto/indexonline.html
@@ -797,7 +797,7 @@
 							</div>
 <!-- modale -->
 							<div class="extra-space-hero">
-								<div id="beerstrotdoppio" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
+								<div id="beerstrotDoppio" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
 									<br><br>
 									<img src="https://www.beerstrot.it/asset/img/large/beerstrot-doppio.jpg" alt="">
 									<h2 class="extra-space" id="beerstrotDoppio">Beerstrot Doppio</h2>
@@ -819,12 +819,12 @@
 										</label>
 									</div>
 									<div class="counter extra-space-hero left">
-										<input class="counter__input" type="text" value="4" name="counter" size="1" readonly="readonly" style="border:none; box-shadow:none;"/>
+										<input class="counter__input" type="text" value="1" name="counter" size="1" readonly="readonly" style="border:none; box-shadow:none;"/>
 										<a class="counter__increment" href="javascript:void(0)">+</a>
 										<a class="counter__decrement" href="javascript:void(0)">&ndash;</a>
 									</div>
                                     <div>
-								  	<a href="#" class="button expand extra-space " data-reveal-id="bocconcini">Aggiungi al carrello<span class="price"> €47,6</span></a>
+								  	<a href="#" class="button expand extra-space " data-reveal-id="bocconcini">Aggiungi al carrello<span class="price"> €15,9</span></a>
                                        </div>
 								  	<br><br><br>
 								  	<a class="close-reveal-modal" aria-label="Close">&#215;</a>
