--- a/asporto/indexonline.html
+++ b/asporto/indexonline.html
@@ -129,7 +129,7 @@
 							</div>
 <!-- modale -->
 							<div class="extra-space-hero">
-								<div id="bocconcini" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
+								<div id="bocconcini" class="reveal-modal small" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
 									<br><br>
 									<img src="https://www.beerstrot.it/asset/img/large/battuto-vitello.jpg" alt="">
 									<h2 class="extra-space" id="modalTitle">Bocconcini di Pollo</h2>
@@ -199,9 +199,9 @@
 <!-- modale -->
 							<div class="extra-space-hero">
 
-								<div id="cipolle" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
+								<div id="cipolle" class="reveal-modal tiny" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
 									<br><br>
-									<img src="https://www.beerstrot.it/asset/img/large/cena-san-martino-2016.jpg" alt="">
+									<img src="https://www.beerstrot.it/asset/img/large/cena-san-martino-2016.jpg" class="center">
 									<h2 class="extra-space" id="modalTitle">Cipolle Rosse</h2>
 									<p>Cipolla rossa in tempura.<br>
 									<small>Allergeni: Glutine, Latte, Crostacei</small>
@@ -340,9 +340,9 @@
 <!-- modale -->
 							<div class="extra-space-hero">
 
-								<div id="cipolle" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
+								<div id="cipolle" class="reveal-modal small" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
 									<br><br>
-									<img src="https://www.beerstrot.it/asset/img/large/cena-san-martino-2016.jpg" alt="">
+									<img src="https://www.beerstrot.it/asset/img/large/cena-san-martino-2016.jpg" class="center">
 									<h2 class="extra-space" id="modalTitle">Cipolle Rosse</h2>
 									<p>Cipolla rossa in tempura.<br>
 									<small>Allergeni: Glutine, Latte, Crostacei</small>
@@ -696,7 +696,7 @@
 									<img src="https://www.beerstrot.it/asset/img/_src/large/estivo.jpg" alt="">
 									<h2 class="extra-space" id="modalTitle">Mini Burger 7,9</h2>
 									<p>Manzo (100 grammi), cheddar. Servito con patatine e ben cotto<br>
-										<small>Contiene: Glutine, Uova, Latte</small>
+									<small>Contiene: Glutine, Uova, Latte</small>
 									</p>
 									<div class="extra-space-hero">
 										<label><strong>Note</strong>
@@ -732,7 +732,7 @@
 			<div class="row">
 				<div class="large-12 medium-12 small-12 columns">
 					<h2 class="subheader">Hamburger Classici<br>
-					<small>Hamburger da 180 grammi. serviti con patate fritte e a cottura media</small></h2>
+					<small>Serviti con patate fritte</small></h2>
 					<ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-2 title-divider">
 						<li>
 							<div class="row">
@@ -741,19 +741,19 @@
 								</div>
 								<div class="small-8 columns">
 									<h3>Beerstrot<span class="price">11,9</span></h3>
-									<p>Burger di manzo (180 grammi), cheddar, bacon croccante, insalata, cipolla caramellata, pomodorini confit. Servito con patatine e a cottura media. <br>
-									<small><i>Allergeni: Glutine, Latte, Uova</i></small></p>
+									<p>Burger di manzo (180 grammi), cheddar, bacon croccante, insalata, cipolla caramellata, pomodorini confit.<br>
+									<small>Allergeni: Glutine, Latte, Uova</small></p>
 									<a href="#" class="button tiny" data-reveal-id="beerstrotimage">Aggiungi al Carrello</a>
 								</div>
 							</div>
 <!-- modale -->
 							<div class="extra-space-hero">
-								<div id="beerstrotimage" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
+								<div id="beerstrotimage" class="reveal-modal small modal-body" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
 									<br><br>
 									<img src="https://www.beerstrot.it/asset/img/large/estivo.jpg" alt="">
 									<h2 class="extra-space" id="beerstrotimage">Beerstrot</h2>
-									<p>Burger di manzo (180 grammi), cheddar, bacon croccante, insalata, cipolla caramellata, pomodorini confit. Servito con patatine e a cottura media. <br>
-									<small><i>Allergeni: Glutine, Latte, Uova</i></small></p>
+									<p>Burger di manzo (180 grammi), cheddar, bacon croccante, insalata, cipolla caramellata, pomodorini confit. Servito con patatine e a cottura media.<br>
+									<small>Allergeni: Glutine, Latte, Uova</small></p>
 								    <div class="extra-space-hero">
 										<label><strong>Cottura</strong>
 											<select>
@@ -790,19 +790,18 @@
 								</div>
 								<div class="small-8 columns">
 									<h3>Beerstrot Doppio<span class="price">15,9</span></h3>
-									<p>Doppio burger di manzo (180 grammi x2), cheddar, bacon croccante, insalata, cipolla caramellata, pomodorini confit. Servito con patatine e a cottura media. <br>
-									<small><i>Allergeni: Glutine, Latte, Uova</i></small></p>
+									<p>Doppio burger di manzo (180 grammi x2), cheddar, bacon croccante, insalata, cipolla caramellata, pomodorini confit.<br>
+									<small>Allergeni: Glutine, Latte, Uova</small></p>
 									<a href="#" class="button tiny" data-reveal-id="beerstrotDoppio">Aggiungi al Carrello</a>
 								</div>
 							</div>
 <!-- modale -->
 							<div class="extra-space-hero">
-								<div id="beerstrotDoppio" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
+								<div id="beerstrotDoppio" class="reveal-modal small" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
 									<br><br>
-									<img src="https://www.beerstrot.it/asset/img/large/beerstrot-doppio.jpg" alt="">
+									<img src="https://www.beerstrot.it/asset/img/large/beerstrot-doppio.jpg" class="extra-space-img-asporto center">
 									<h2 class="extra-space" id="beerstrotDoppio">Beerstrot Doppio</h2>
-									<p>Doppio burger di manzo (180 grammi x2), cheddar, bacon croccante, insalata, cipolla caramellata, pomodorini confit. Servito con patatine e a cottura media. <br>
-									<small><i>Allergeni: Glutine, Latte, Uova</i></small></p>
+									<p>Doppio burger di manzo (180 grammi x2), cheddar, bacon croccante, insalata, cipolla caramellata, pomodorini confit.</p>
 								    <div class="extra-space-hero">
 										<label><strong>Cottura</strong>
 											<select>
